--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,7 +22,7 @@ body {
 
       .portrait {
         position: absolute;
-        background-image: url(./img/profile.jpg);
+        background-image: url(../img/profile.jpg);
         width: 5vw;
         height: 10vh;
         border: 1px solid $second-color;
