--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,7 +47,7 @@ body {
           margin: 25px;
           border: 1px solid $second-color;
           border-radius: 10px;
-          width: 250px;
+          width: 16vw;
           color: $second-color;
           font-family: "Open-sans", sans-serif;
 
