--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,7 @@ body .left .navbar .navlinks .btn {
   margin: 25px;
   border: 1px solid #fff;
   border-radius: 10px;
-  width: 250px;
+  width: 16vw;
   color: #fff;
   font-family: "Open-sans", sans-serif;
 }
